--- a/SmartGel/Base.lproj/Main.storyboard
+++ b/SmartGel/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="qbT-Gi-bdi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,7 @@
     </dependencies>
     <customFonts key="customFonts">
         <array key="Avenir.ttc">
+            <string>Avenir-Book</string>
             <string>Avenir-Heavy</string>
         </array>
     </customFonts>
@@ -37,8 +38,12 @@
                                                 <color key="backgroundColor" red="0.1960784314" green="0.2274509804" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M1e-FX-kfH">
-                                                <rect key="frame" x="176.5" y="230.5" width="23" height="22"/>
-                                                <state key="normal" image="ic_take_photo">
+                                                <rect key="frame" x="163" y="216.5" width="50" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="17E-Nh-8f0"/>
+                                                    <constraint firstAttribute="height" constant="50" id="71N-aM-KPd"/>
+                                                </constraints>
+                                                <state key="normal" backgroundImage="ic_take_photo">
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
                                                 <connections>
@@ -46,18 +51,18 @@
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please take a photo to estimate clean state" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f3Q-ZR-bNC">
-                                                <rect key="frame" x="24" y="262.5" width="328" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="24.5" y="276.5" width="326" height="23.5"/>
+                                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MGE-Nh-JIh">
-                                                <rect key="frame" x="239" y="433" width="120" height="30"/>
+                                                <rect key="frame" x="219" y="433" width="140" height="30"/>
                                                 <color key="backgroundColor" red="0.94901960780000005" green="0.47843137250000001" blue="0.20784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="cOa-Kx-bEU"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="140" id="cOa-Kx-bEU"/>
                                                 </constraints>
-                                                <state key="normal" title="Clean Area">
+                                                <state key="normal" title="Show Clean Area">
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
                                                 <connections>
@@ -206,13 +211,15 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
                         <outlet property="dateLabel" destination="WZ3-Ri-j9d" id="4bf-te-7p6"/>
                         <outlet property="locationLabel" destination="emM-ow-Xav" id="RUd-RU-vnj"/>
                         <outlet property="notificationLabel" destination="f3Q-ZR-bNC" id="2E4-RF-hLG"/>
+                        <outlet property="showCleanAreaButton" destination="MGE-Nh-JIh" id="4M0-eF-22p"/>
+                        <outlet property="takePhotoButton" destination="M1e-FX-kfH" id="vSb-kn-hAj"/>
                         <outlet property="takenImageView" destination="0ne-iK-goy" id="c2M-wW-8I1"/>
                         <outlet property="valueLabel" destination="2AI-Gb-dku" id="SlY-tf-vWb"/>
-                        <segue destination="T8D-db-dfv" kind="show" identifier="gotoHistory" id="blS-RP-WtT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -222,7 +229,7 @@
         <!--Work History-->
         <scene sceneID="X7X-W8-PyR">
             <objects>
-                <viewController id="T8D-db-dfv" customClass="SGHistoryViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SGHistoryViewController" id="T8D-db-dfv" customClass="SGHistoryViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="MjT-kM-Vmx"/>
                         <viewControllerLayoutGuide type="bottom" id="reb-DM-KDw"/>
@@ -454,12 +461,19 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Work History" id="Gpo-Yh-ElV">
+                        <barButtonItem key="leftBarButtonItem" image="ic_menu" id="Too-ui-ZuB">
+                            <connections>
+                                <action selector="presentLeftMenuViewController:" destination="T8D-db-dfv" id="EoY-9k-M46"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="trash" id="n4i-RF-Ry1">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="rightButtonAction" destination="T8D-db-dfv" id="REG-JC-fZU"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
                         <outlet property="dateLabel" destination="k4K-U1-UwT" id="7RT-cj-RXQ"/>
                         <outlet property="detailView" destination="FAt-Vp-ne3" id="XgR-GZ-0dZ"/>
@@ -478,27 +492,49 @@
             </objects>
             <point key="canvasLocation" x="1908" y="123.68815592203899"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Mln-XX-HjR">
+        <!--About SmartGel-->
+        <scene sceneID="CsO-RI-HiC">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tC4-2L-bwO" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController id="qbT-Gi-bdi" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" opaque="NO" contentMode="scaleToFill" translucent="NO" id="bPs-a8-sgz">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.14901960780000001" green="0.1764705882" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <color key="barTintColor" red="0.14901960784313725" green="0.1764705882352941" blue="0.21176470588235294" alpha="1" colorSpace="calibratedRGB"/>
-                        <textAttributes key="titleTextAttributes">
-                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        </textAttributes>
-                    </navigationBar>
+                <viewController storyboardIdentifier="SGWebViewController" id="EVT-kc-oZ0" customClass="SGWebViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kuT-Ms-i6m"/>
+                        <viewControllerLayoutGuide type="bottom" id="iGn-r4-frD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="z4q-JY-t7l">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aFK-iy-n31">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <outlet property="delegate" destination="EVT-kc-oZ0" id="9KF-Ef-Yz3"/>
+                                </connections>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="iGn-r4-frD" firstAttribute="top" secondItem="aFK-iy-n31" secondAttribute="bottom" id="3cF-ga-AwI"/>
+                            <constraint firstAttribute="trailing" secondItem="aFK-iy-n31" secondAttribute="trailing" id="QFl-ew-HZ0"/>
+                            <constraint firstItem="aFK-iy-n31" firstAttribute="leading" secondItem="z4q-JY-t7l" secondAttribute="leading" id="pxZ-db-aAz"/>
+                            <constraint firstItem="aFK-iy-n31" firstAttribute="top" secondItem="kuT-Ms-i6m" secondAttribute="bottom" id="qa8-1c-xEl"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="About SmartGel" id="8Qa-eT-bNU">
+                        <barButtonItem key="leftBarButtonItem" image="ic_menu" id="GMe-Um-veR">
+                            <connections>
+                                <action selector="presentLeftMenuViewController:" destination="EVT-kc-oZ0" id="3Pb-rU-aTx"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ycx-15-oyE"/>
+                        <outlet property="webView" destination="aFK-iy-n31" id="Qe7-z3-e0O"/>
                     </connections>
-                </navigationController>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kQy-kq-xpu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="196" y="124"/>
+            <point key="canvasLocation" x="2652" y="124"/>
         </scene>
         <!--Menu View Controller-->
         <scene sceneID="OLG-88-UDu">
