--- a/SmartGel/view/SGMenuTableViewCell.xib
+++ b/SmartGel/view/SGMenuTableViewCell.xib
@@ -23,15 +23,16 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rYE-1H-E3z">
                     <rect key="frame" x="0.0" y="0.0" width="439" height="62"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lookup_amatorka.png" translatesAutoresizingMaskIntoConstraints="NO" id="Lef-F9-Qua">
-                            <rect key="frame" x="20" y="21" width="20" height="20"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lef-F9-Qua">
+                            <rect key="frame" x="20" y="31" width="0.0" height="0.0"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="20" id="8ta-qd-7tJ"/>
-                                <constraint firstAttribute="height" constant="20" id="bHe-Ey-oA2"/>
+                                <constraint firstAttribute="width" id="8ta-qd-7tJ"/>
+                                <constraint firstAttribute="height" id="bHe-Ey-oA2"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show History" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NVV-by-qGq">
-                            <rect key="frame" x="65" y="14.5" width="149" height="33"/>
+                            <rect key="frame" x="45" y="14.5" width="149" height="33"/>
                             <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="24"/>
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -62,7 +63,4 @@
             <point key="canvasLocation" x="30.5" y="-19"/>
         </view>
     </objects>
-    <resources>
-        <image name="lookup_amatorka.png" width="512" height="512"/>
-    </resources>
 </document>
